--- a/Subgroup B/Question_1_Inventory_Optimisation.ipynb
+++ b/Subgroup B/Question_1_Inventory_Optimisation.ipynb
@@ -13289,8 +13289,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18:25:14 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "18:25:14 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "19:38:49 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "19:38:49 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -16166,8 +16166,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18:25:14 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "18:25:14 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "19:38:50 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "19:38:50 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -27796,8 +27796,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18:25:17 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "18:25:17 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "19:38:51 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "19:38:52 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -30983,8 +30983,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18:25:18 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "18:25:18 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "19:38:52 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "19:38:52 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -34289,12 +34289,17 @@
    "source": [
     "test_forecast.to_pickle('Outputs/test_forecast.pkl')\n",
     "future_forecast.to_pickle('Outputs/future_forecast.pkl')\n",
+    "future_forecast.to_csv('Outputs/future_forecast.csv')\n",
     "products_df.to_pickle('Outputs/products.pkl')\n",
     "merged_df.to_pickle('Outputs/orders.pkl')\n",
     "daily_aggregated_df.to_pickle('Outputs/daily_sales.pkl')\n",
     "daily_aggregated_df_by_main_category.to_pickle('Outputs/daily_sales_by_main_category.pkl')\n",
     "daily_aggregated_df_by_mid_category.to_pickle('Outputs/daily_sales_by_mid_category.pkl')\n",
-    "daily_aggregated_df_by_sub_category.to_pickle('Outputs/daily_sales_by_sub_category.pkl')"
+    "daily_aggregated_df_by_sub_category.to_pickle('Outputs/daily_sales_by_sub_category.pkl')\n",
+    "daily_aggregated_df.to_csv('Outputs/daily_sales.csv')\n",
+    "daily_aggregated_df_by_main_category.to_csv('Outputs/daily_sales_by_main_category.csv')\n",
+    "daily_aggregated_df_by_mid_category.to_csv('Outputs/daily_sales_by_mid_category.csv')\n",
+    "daily_aggregated_df_by_sub_category.to_csv('Outputs/daily_sales_by_sub_category.csv')"
    ]
   },
   {
