--- a/Subgroup A/Question_3_Analysis_of_Marketing_Channels_and_Campaigns.ipynb
+++ b/Subgroup A/Question_3_Analysis_of_Marketing_Channels_and_Campaigns.ipynb
@@ -68,7 +68,9 @@
         "import sqlite3\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "from matplotlib.ticker import ScalarFormatter"
+        "from matplotlib.ticker import ScalarFormatter\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
       ]
     },
     {
