--- a/Data Preparation/Data_Preparation_2.ipynb
+++ b/Data Preparation/Data_Preparation_2.ipynb
@@ -10,12 +10,14 @@
       "source": [
         "import os\n",
         "import numpy as np\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {
         "id": "PQUGTuhTLmzC"
       },
@@ -41,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {
         "id": "fPliid8Ua5TB"
       },
@@ -81,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {
         "id": "BQEt8E6ZckPA"
       },
@@ -118,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "metadata": {
         "id": "VKrdFYPDt_Tc"
       },
@@ -333,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -401,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -410,19 +412,6 @@
         "outputId": "b0b3489a-f3fc-4f90-ff28-f4c2a1283623"
       },
       "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "<ipython-input-7-ab304a92d530>:116: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-            "\n",
-            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-            "\n",
-            "\n",
-            "  campaign_df['target_audience'].fillna('new customer', inplace=True)\n"
-          ]
-        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -488,7 +477,7 @@
               "100000"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -625,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -805,7 +794,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
