--- a/Subgroup B/Question_1_Inventory_Optimisation.ipynb
+++ b/Subgroup B/Question_1_Inventory_Optimisation.ipynb
@@ -13289,8 +13289,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19:38:49 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "19:38:49 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "21:18:37 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "21:18:37 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -16166,8 +16166,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19:38:50 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "19:38:50 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "21:18:37 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "21:18:37 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -27796,8 +27796,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19:38:51 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "19:38:52 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "21:18:39 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "21:18:39 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -30983,8 +30983,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "19:38:52 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "19:38:52 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "21:18:40 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "21:18:40 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -34354,7 +34354,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -34368,9 +34368,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
