Added Fixed Analysis

--- a/Subgroup B/Question_1_Inventory_Optimisation.ipynb
+++ b/Subgroup B/Question_1_Inventory_Optimisation.ipynb
@@ -6,7 +6,7 @@
     "id": "7dkYVwT3LOA3"
    },
    "source": [
-    "# **Optimizing Inventory Levels to Minimize Costs and Ensure Product Availability Through Advanced Demand Forecasting and Inventory Optimization Techniques**\n",
+    "# **Optimizing Inventory Levels to Minimize Costs and Ensure Product Availability Through Advanced Demand Forecasting and Inventory Optimization Techniques**m\n",
     "\n",
     "---\n",
     "\n",
